tests/baselines/reference/numericIndexerConstraint2.errors.txt
tests/cases/compiler/numericIndexerConstraint2.ts(4,1): error TS2322: Type '{ one: 数字; }' is not assignable to type '{ [index: 文字]: Foo; }'.
  Property 'one' is incompatible with index signature.
    Type '数字' is not assignable to type 'Foo'.


==== tests/cases/compiler/numericIndexerConstraint2.ts (1 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: Foo; };
    var a: { one: number; };
    x = a;
    ~
!!! error TS2322: Type '{ one: 数字; }' is not assignable to type '{ [index: 文字]: Foo; }'.
!!! error TS2322:   Property 'one' is incompatible with index signature.
!!! error TS2322:     Type '数字' is not assignable to type 'Foo'.